--- a/index.html
+++ b/index.html
@@ -7,5 +7,43 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>loginPage</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="leftColumn">
+        <div class="loginInfo">
+          <div class="logo">
+            <h3>kafh</h3>
+          </div>
+          <h1>Welcome Back!</h1>
+          <p>Please login to your account.</p>
+          <input type="text" placeholder="Email Address" />
+          <input type="text" placeholder="Password" />
+          <div class="options">
+            <input type="checkbox" id="rememberMe" />
+            <label id="label" for="rememberMe">Remember me</label><br />
+            <p id="forgetPass">Forgot password?</p>
+          </div>
+          <div class="buttons">
+            <button id="login">Login</button>
+            <button id="createAcc">Create Account</button>
+          </div>
+          <p class="terms">
+            By sign up you agree to our term and that you have read our data
+            policy
+          </p>
+        </div>
+      </div>
+      <div class="image">
+        <img
+          src="ricardo-porto-zNTmNMk9KFM-unsplash.jpg"
+          style="
+            border-radius: 10px;
+            width: 100%;
+            height: 500px;
+            object-fit: cover;
+          "
+        />
+      </div>
+    </div>
+  </body>
 </html>
