--- a/index.html
+++ b/index.html
@@ -33,17 +33,7 @@
           </p>
         </div>
       </div>
-      <div class="image">
-        <img
-          src="ricardo-porto-zNTmNMk9KFM-unsplash.jpg"
-          style="
-            border-radius: 10px;
-            width: 100%;
-            height: 500px;
-            object-fit: cover;
-          "
-        />
-      </div>
+      <div class="image"></div>
     </div>
   </body>
 </html>
